# ARNIE-AI-Operator

./: .gitignore
backend/: aap_integration.py  agent_runtime.py  approval_engine.py  chart_security.py  chart_vetting.py  claude_service.py  cluster_vision.py  codex_service.py  db.py  github_integration.py  github_resolver.py  helm_setup.py  inventory_resolver.py  knowledge_retrieval.py  main.py  model_providers.py  model_router.py  operator_autoground.py  operator_knowledge.py  operator_setup.py  playbook_generator.py  playbook_validator.py  requirements.txt
backend/state/: approvals.json
backend/state/conversations/: 028cec76-617c-41d5-baf0-683fd81be1ef.json  1da30c2f-cb5f-40df-9439-58501c8c0a7e.json  3d624007-e763-4b60-a7f9-2e4d2e2b5d00.json  50cf6688-3219-4399-b1cd-d6e83cd682d4.json  55f4b2e8-26e7-434f-9cd1-5cc2b0a3ed8b.json  6f0e31be-e18b-47d0-aea3-ab6f6a60b87c.json  (+4 more)
cpp/performance/: CMakeLists.txt  Dockerfile
cpp/performance/include/: event_processor.hpp  playbook_analyzer.hpp
cpp/performance/src/: event_processor.cpp  main.cpp  playbook_analyzer.cpp
rmcp_native/: README.md  build.sh  build_so.sh  mini_json.hpp  rmcp_capi.cpp  rmcp_cluster_watch.cpp  rmcp_cluster_watch.hpp  rmcp_native.py  rmcp_policy_core.cpp  rmcp_policy_core.hpp  rmcp_watch_bridge.hpp  test_integration  test_integration.cpp  test_policy  test_policy_core.cpp
rust/reconciliation/: Cargo.toml  build.rs
rust/reconciliation/src/: correction.rs  drift.rs  governance.rs  lib.rs  policy_ffi.rs
rust/state-machine/: Cargo.toml
ui/: app.js  index.html  style.css
(+13 files in other folders)
