[package]
name = "arnie-reconciliation"
version = "0.1.0"
edition = "2021"
description = "RMCP Reconciliation Engine — drift detection for deployed playbooks"
authors = ["BLCKBX"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
